--- a/hello.ipynb
+++ b/hello.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgj+9BLyXzVqsvzNLrZo/U",
+      "authorship_tag": "ABX9TyO+USELVbqNZrITFndmgxoF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +27,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/libra945/myassistant/blob/main/hello.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Try SpeechRecognition**"
-      ],
-      "metadata": {
-        "id": "qL35jYJfMGJ3"
-      }
     },
     {
       "cell_type": "markdown",
@@ -73,6 +64,188 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "To write this piece of code I took inspiration/code from a lot of places.\n",
+        "It was late night, so I'm not sure how much I created or just copied o.O\n",
+        "Here are some of the possible references:\n",
+        "https://blog.addpipe.com/recording-audio-in-the-browser-using-pure-html5-and-minimal-javascript/\n",
+        "https://stackoverflow.com/a/18650249\n",
+        "https://hacks.mozilla.org/2014/06/easy-audio-capture-with-the-mediarecorder-api/\n",
+        "https://air.ghost.io/recording-to-an-audio-file-using-html5-and-js/\n",
+        "https://stackoverflow.com/a/49019356\n",
+        "\"\"\"\n",
+        "from IPython.display import HTML, Audio\n",
+        "from google.colab.output import eval_js\n",
+        "from base64 import b64decode\n",
+        "import numpy as np\n",
+        "from scipy.io.wavfile import read as wav_read\n",
+        "import io\n",
+        "import ffmpeg\n",
+        "\n",
+        "AUDIO_HTML = \"\"\"\n",
+        "<script>\n",
+        "var my_div = document.createElement(\"DIV\");\n",
+        "var my_p = document.createElement(\"P\");\n",
+        "var my_btn = document.createElement(\"BUTTON\");\n",
+        "var t = document.createTextNode(\"Press to start recording\");\n",
+        "\n",
+        "my_btn.appendChild(t);\n",
+        "//my_p.appendChild(my_btn);\n",
+        "my_div.appendChild(my_btn);\n",
+        "document.body.appendChild(my_div);\n",
+        "\n",
+        "var base64data = 0;\n",
+        "var reader;\n",
+        "var recorder, gumStream;\n",
+        "var recordButton = my_btn;\n",
+        "\n",
+        "var handleSuccess = function(stream) {\n",
+        "  gumStream = stream;\n",
+        "  var options = {\n",
+        "    //bitsPerSecond: 8000, //chrome seems to ignore, always 48k\n",
+        "    mimeType : 'audio/webm;codecs=opus'\n",
+        "    //mimeType : 'audio/webm;codecs=pcm'\n",
+        "  };            \n",
+        "  //recorder = new MediaRecorder(stream, options);\n",
+        "  recorder = new MediaRecorder(stream);\n",
+        "  recorder.ondataavailable = function(e) {            \n",
+        "    var url = URL.createObjectURL(e.data);\n",
+        "    var preview = document.createElement('audio');\n",
+        "    preview.controls = true;\n",
+        "    preview.src = url;\n",
+        "    document.body.appendChild(preview);\n",
+        "\n",
+        "    reader = new FileReader();\n",
+        "    reader.readAsDataURL(e.data); \n",
+        "    reader.onloadend = function() {\n",
+        "      base64data = reader.result;\n",
+        "      //console.log(\"Inside FileReader:\" + base64data);\n",
+        "    }\n",
+        "  };\n",
+        "  recorder.start();\n",
+        "  };\n",
+        "\n",
+        "recordButton.innerText = \"Recording... press to stop\";\n",
+        "\n",
+        "navigator.mediaDevices.getUserMedia({audio: true}).then(handleSuccess);\n",
+        "\n",
+        "\n",
+        "function toggleRecording() {\n",
+        "  if (recorder && recorder.state == \"recording\") {\n",
+        "      recorder.stop();\n",
+        "      gumStream.getAudioTracks()[0].stop();\n",
+        "      recordButton.innerText = \"Saving the recording... pls wait!\"\n",
+        "  }\n",
+        "}\n",
+        "\n",
+        "// https://stackoverflow.com/a/951057\n",
+        "function sleep(ms) {\n",
+        "  return new Promise(resolve => setTimeout(resolve, ms));\n",
+        "}\n",
+        "\n",
+        "var data = new Promise(resolve=>{\n",
+        "//recordButton.addEventListener(\"click\", toggleRecording);\n",
+        "recordButton.onclick = ()=>{\n",
+        "toggleRecording()\n",
+        "\n",
+        "sleep(2000).then(() => {\n",
+        "  // wait 2000ms for the data to be available...\n",
+        "  // ideally this should use something like await...\n",
+        "  //console.log(\"Inside data:\" + base64data)\n",
+        "  resolve(base64data.toString())\n",
+        "\n",
+        "});\n",
+        "\n",
+        "}\n",
+        "});\n",
+        "      \n",
+        "</script>\n",
+        "\"\"\"\n",
+        "\n",
+        "def get_audio():\n",
+        "  display(HTML(AUDIO_HTML))\n",
+        "  data = eval_js(\"data\")\n",
+        "  binary = b64decode(data.split(',')[1])\n",
+        "  \n",
+        "  process = (ffmpeg\n",
+        "    .input('pipe:0')\n",
+        "    .output('pipe:1', format='wav')\n",
+        "    .run_async(pipe_stdin=True, pipe_stdout=True, pipe_stderr=True, quiet=True, overwrite_output=True)\n",
+        "  )\n",
+        "  output, err = process.communicate(input=binary)\n",
+        "  \n",
+        "  riff_chunk_size = len(output) - 8\n",
+        "  # Break up the chunk size into four bytes, held in b.\n",
+        "  q = riff_chunk_size\n",
+        "  b = []\n",
+        "  for i in range(4):\n",
+        "      q, r = divmod(q, 256)\n",
+        "      b.append(r)\n",
+        "\n",
+        "  # Replace bytes 4:8 in proc.stdout with the actual size of the RIFF chunk.\n",
+        "  riff = output[:4] + bytes(b) + output[8:]\n",
+        "\n",
+        "  sr, audio = wav_read(io.BytesIO(riff))\n",
+        "\n",
+        "  return audio, sr"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 375
+        },
+        "id": "2oQyc6w6TJuG",
+        "outputId": "02094761-3c60-49fc-9c70-39d506bc931b"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-a58588527148>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwavfile\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mread\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mwav_read\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mffmpeg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m AUDIO_HTML = \"\"\"\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ffmpeg'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "audio, sr = get_audio()"
+      ],
+      "metadata": {
+        "id": "xm0ENNPcTMDk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Try SpeechRecognition**"
+      ],
+      "metadata": {
+        "id": "qL35jYJfMGJ3"
+      }
     },
     {
       "cell_type": "code",
