使用 Colaboratory 建立

--- a/hello.ipynb
+++ b/hello.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+USELVbqNZrITFndmgxoF",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPTNnvB2t9aEXlK2On1N3Jn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +32,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Speak to Text"
+      ],
+      "metadata": {
+        "id": "UIt97XNlz5Sn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Record audio from your microphone"
       ],
       "metadata": {
@@ -49,7 +59,7 @@
         "id": "Gs4xcJPzNLQi",
         "outputId": "60172ce5-cefc-42ff-f9e6-8f27a41ad90f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +211,7 @@
         "id": "2oQyc6w6TJuG",
         "outputId": "02094761-3c60-49fc-9c70-39d506bc931b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -249,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -304,6 +314,126 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Hello API"
+      ],
+      "metadata": {
+        "id": "Zb9Ymj0Bz1Jq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**install flask and flask-ngrok**"
+      ],
+      "metadata": {
+        "id": "a4SPi_QM0OaP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pyngrok==4.1.1\n",
+        "!pip install flask-ngrok\n",
+        "!ngrok authtoken '2LiUt3LGEw3Zy9hMgtdaPFrXgu4_YSptGsNnAB9PNqXgxaEh'"
+      ],
+      "metadata": {
+        "id": "OnftTkbW0ZaN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hello World"
+      ],
+      "metadata": {
+        "id": "usUU_rm91F9A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from flask_ngrok import run_with_ngrok\n",
+        "from flask import request, jsonify, Flask\n",
+        "app = Flask(__name__)\n",
+        "app.config['JSON_AS_ASCII'] = False # using UTF-8\n",
+        "run_with_ngrok(app)\n",
+        "\n",
+        "headers = {\n",
+        "    'ngrok-skip-browser-warning': '0'\n",
+        "    }\n",
+        "\n",
+        "# 設定產品\n",
+        "items = [\n",
+        "    {\"name\": \"4G暢打資費299型\", \"price\": 299  },\n",
+        "    {\"name\": \"4G暢打資費499型\", \"price\": 499  },\n",
+        "    {\"name\": \"4G暢打資費799型\", \"price\": 799  },\n",
+        "    {\"name\": \"4G手機資費198型\", \"price\": 198  },\n",
+        "    {\"name\": \"4G手機資費398型\", \"price\": 398  },\n",
+        "    {\"name\": \"4G手機資費598型\", \"price\": 598  },\n",
+        "    {\"name\": \"4G手機資費798型\", \"price\": 798  },\n",
+        "    {\"name\": \"4G上網資費296型\", \"price\": 298  },\n",
+        "    {\"name\": \"4G上網資費496型\", \"price\": 498  }\n",
+        "]\n",
+        "\n",
+        "@app.route('/')\n",
+        "def home():\n",
+        "  return 'Hello World~~'\n",
+        "\n",
+        "@app.route(\"/listall\")\n",
+        "def listall():\n",
+        "  return jsonify(items)\n",
+        "\n",
+        "app.run()"
+      ],
+      "metadata": {
+        "id": "sutv1mye1J2K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aee124ed-c1ac-46a6-e5c6-04e5f6c9e719"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * Serving Flask app \"__main__\" (lazy loading)\n",
+            " * Environment: production\n",
+            "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
+            "\u001b[2m   Use a production WSGI server instead.\u001b[0m\n",
+            " * Debug mode: off\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:werkzeug: * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * Running on http://6842-34-124-175-14.ngrok.io\n",
+            " * Traffic stats available on http://127.0.0.1:4040\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:werkzeug:127.0.0.1 - - [14/Feb/2023 07:13:27] \"\u001b[37mGET /listall HTTP/1.1\u001b[0m\" 200 -\n"
+          ]
+        }
+      ]
     }
   ]
 }
