使用 Colaboratory 建立

--- a/hello.ipynb
+++ b/hello.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPTNnvB2t9aEXlK2On1N3Jn",
+      "authorship_tag": "ABX9TyOt/AzqYx/HASg5scsgfHyl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,9 +57,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gs4xcJPzNLQi",
-        "outputId": "60172ce5-cefc-42ff-f9e6-8f27a41ad90f"
+        "outputId": "a5339bb4-299a-409d-c511-b9981f4fb6f9"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,38 +204,10 @@
         "  return audio, sr"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 375
-        },
-        "id": "2oQyc6w6TJuG",
-        "outputId": "02094761-3c60-49fc-9c70-39d506bc931b"
+        "id": "2oQyc6w6TJuG"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-a58588527148>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwavfile\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mread\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mwav_read\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mffmpeg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m AUDIO_HTML = \"\"\"\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ffmpeg'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ]
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -243,10 +215,117 @@
         "audio, sr = get_audio()"
       ],
       "metadata": {
-        "id": "xm0ENNPcTMDk"
+        "id": "xm0ENNPcTMDk",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 310
+        },
+        "outputId": "7903e86c-4677-4a38-d999-5117a15ca8d6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<script>\n",
+              "var my_div = document.createElement(\"DIV\");\n",
+              "var my_p = document.createElement(\"P\");\n",
+              "var my_btn = document.createElement(\"BUTTON\");\n",
+              "var t = document.createTextNode(\"Press to start recording\");\n",
+              "\n",
+              "my_btn.appendChild(t);\n",
+              "//my_p.appendChild(my_btn);\n",
+              "my_div.appendChild(my_btn);\n",
+              "document.body.appendChild(my_div);\n",
+              "\n",
+              "var base64data = 0;\n",
+              "var reader;\n",
+              "var recorder, gumStream;\n",
+              "var recordButton = my_btn;\n",
+              "\n",
+              "var handleSuccess = function(stream) {\n",
+              "  gumStream = stream;\n",
+              "  var options = {\n",
+              "    //bitsPerSecond: 8000, //chrome seems to ignore, always 48k\n",
+              "    mimeType : 'audio/webm;codecs=opus'\n",
+              "    //mimeType : 'audio/webm;codecs=pcm'\n",
+              "  };            \n",
+              "  //recorder = new MediaRecorder(stream, options);\n",
+              "  recorder = new MediaRecorder(stream);\n",
+              "  recorder.ondataavailable = function(e) {            \n",
+              "    var url = URL.createObjectURL(e.data);\n",
+              "    var preview = document.createElement('audio');\n",
+              "    preview.controls = true;\n",
+              "    preview.src = url;\n",
+              "    document.body.appendChild(preview);\n",
+              "\n",
+              "    reader = new FileReader();\n",
+              "    reader.readAsDataURL(e.data); \n",
+              "    reader.onloadend = function() {\n",
+              "      base64data = reader.result;\n",
+              "      //console.log(\"Inside FileReader:\" + base64data);\n",
+              "    }\n",
+              "  };\n",
+              "  recorder.start();\n",
+              "  };\n",
+              "\n",
+              "recordButton.innerText = \"Recording... press to stop\";\n",
+              "\n",
+              "navigator.mediaDevices.getUserMedia({audio: true}).then(handleSuccess);\n",
+              "\n",
+              "\n",
+              "function toggleRecording() {\n",
+              "  if (recorder && recorder.state == \"recording\") {\n",
+              "      recorder.stop();\n",
+              "      gumStream.getAudioTracks()[0].stop();\n",
+              "      recordButton.innerText = \"Saving the recording... pls wait!\"\n",
+              "  }\n",
+              "}\n",
+              "\n",
+              "// https://stackoverflow.com/a/951057\n",
+              "function sleep(ms) {\n",
+              "  return new Promise(resolve => setTimeout(resolve, ms));\n",
+              "}\n",
+              "\n",
+              "var data = new Promise(resolve=>{\n",
+              "//recordButton.addEventListener(\"click\", toggleRecording);\n",
+              "recordButton.onclick = ()=>{\n",
+              "toggleRecording()\n",
+              "\n",
+              "sleep(2000).then(() => {\n",
+              "  // wait 2000ms for the data to be available...\n",
+              "  // ideally this should use something like await...\n",
+              "  //console.log(\"Inside data:\" + base64data)\n",
+              "  resolve(base64data.toString())\n",
+              "\n",
+              "});\n",
+              "\n",
+              "}\n",
+              "});\n",
+              "      \n",
+              "</script>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-56a6f6dbcbd2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maudio\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_audio\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-6-a58588527148>\u001b[0m in \u001b[0;36mget_audio\u001b[0;34m()\u001b[0m\n\u001b[1;32m    100\u001b[0m   \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mHTML\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAUDIO_HTML\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m   \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meval_js\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"data\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 102\u001b[0;31m   \u001b[0mbinary\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mb64decode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m   process = (ffmpeg\n",
+            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -261,37 +340,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "U_Y22NoN3IWo",
-        "outputId": "d345f43c-e328-4189-ae7f-43ba95753759"
+        "id": "U_Y22NoN3IWo"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting SpeechRecognition\n",
-            "  Downloading SpeechRecognition-3.9.0-py2.py3-none-any.whl (32.8 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m32.8/32.8 MB\u001b[0m \u001b[31m48.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting requests>=2.26.0\n",
-            "  Downloading requests-2.28.2-py3-none-any.whl (62 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.8/62.8 KB\u001b[0m \u001b[31m10.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests>=2.26.0->SpeechRecognition) (1.24.3)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests>=2.26.0->SpeechRecognition) (2.10)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.8/dist-packages (from requests>=2.26.0->SpeechRecognition) (2.1.1)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests>=2.26.0->SpeechRecognition) (2022.12.7)\n",
-            "Installing collected packages: requests, SpeechRecognition\n",
-            "  Attempting uninstall: requests\n",
-            "    Found existing installation: requests 2.25.1\n",
-            "    Uninstalling requests-2.25.1:\n",
-            "      Successfully uninstalled requests-2.25.1\n",
-            "Successfully installed SpeechRecognition-3.9.0 requests-2.28.2\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install SpeechRecognition"
       ]
@@ -341,10 +392,51 @@
         "!ngrok authtoken '2LiUt3LGEw3Zy9hMgtdaPFrXgu4_YSptGsNnAB9PNqXgxaEh'"
       ],
       "metadata": {
-        "id": "OnftTkbW0ZaN"
+        "id": "OnftTkbW0ZaN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "23bde11a-6a54-44ae-957c-03094873e49d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting pyngrok==4.1.1\n",
+            "  Downloading pyngrok-4.1.1.tar.gz (18 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.8/dist-packages (from pyngrok==4.1.1) (0.16.0)\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.8/dist-packages (from pyngrok==4.1.1) (6.0)\n",
+            "Building wheels for collected packages: pyngrok\n",
+            "  Building wheel for pyngrok (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyngrok: filename=pyngrok-4.1.1-py3-none-any.whl size=15982 sha256=898e2a4cbf108d239c5421f6edb5bfb6bc0fb703deab39fa1b261aa0bbb7eabf\n",
+            "  Stored in directory: /root/.cache/pip/wheels/5e/0a/51/8cb053ccd84481dd3233eba4cdb608bc7a885fd8ca418c0806\n",
+            "Successfully built pyngrok\n",
+            "Installing collected packages: pyngrok\n",
+            "Successfully installed pyngrok-4.1.1\n",
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting flask-ngrok\n",
+            "  Downloading flask_ngrok-0.0.25-py3-none-any.whl (3.1 kB)\n",
+            "Requirement already satisfied: Flask>=0.8 in /usr/local/lib/python3.8/dist-packages (from flask-ngrok) (1.1.4)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.8/dist-packages (from flask-ngrok) (2.25.1)\n",
+            "Requirement already satisfied: itsdangerous<2.0,>=0.24 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (1.1.0)\n",
+            "Requirement already satisfied: click<8.0,>=5.1 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (7.1.2)\n",
+            "Requirement already satisfied: Jinja2<3.0,>=2.10.1 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (2.11.3)\n",
+            "Requirement already satisfied: Werkzeug<2.0,>=0.15 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (1.0.1)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests->flask-ngrok) (2022.12.7)\n",
+            "Requirement already satisfied: chardet<5,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests->flask-ngrok) (4.0.0)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests->flask-ngrok) (2.10)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests->flask-ngrok) (1.24.3)\n",
+            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.8/dist-packages (from Jinja2<3.0,>=2.10.1->Flask>=0.8->flask-ngrok) (2.0.1)\n",
+            "Installing collected packages: flask-ngrok\n",
+            "Successfully installed flask-ngrok-0.0.25\n",
+            "Authtoken saved to configuration file: /root/.ngrok2/ngrok.yml\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -381,9 +473,9 @@
         "    {\"name\": \"4G上網資費496型\", \"price\": 498  }\n",
         "]\n",
         "\n",
-        "@app.route('/')\n",
-        "def home():\n",
-        "  return 'Hello World~~'\n",
+        "@app.route('/checkservice')\n",
+        "def checkservice():\n",
+        "  return 'OK'\n",
         "\n",
         "@app.route(\"/listall\")\n",
         "def listall():\n",
@@ -396,9 +488,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aee124ed-c1ac-46a6-e5c6-04e5f6c9e719"
+        "outputId": "7acfc6de-57f7-4b5a-cd62-40f0e4954ae7"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,7 +514,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " * Running on http://6842-34-124-175-14.ngrok.io\n",
+            " * Running on http://4373-34-87-16-231.ngrok.io\n",
             " * Traffic stats available on http://127.0.0.1:4040\n"
           ]
         },
@@ -430,7 +522,14 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "INFO:werkzeug:127.0.0.1 - - [14/Feb/2023 07:13:27] \"\u001b[37mGET /listall HTTP/1.1\u001b[0m\" 200 -\n"
+            "INFO:werkzeug:127.0.0.1 - - [14/Feb/2023 07:34:59] \"\u001b[37mGET /checkservice HTTP/1.1\u001b[0m\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [14/Feb/2023 07:35:11] \"\u001b[37mGET /listall HTTP/1.1\u001b[0m\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [14/Feb/2023 07:37:06] \"\u001b[37mGET /checkservice HTTP/1.1\u001b[0m\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [14/Feb/2023 07:38:46] \"\u001b[37mGET /checkservice HTTP/1.1\u001b[0m\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [14/Feb/2023 07:39:50] \"\u001b[37mGET /checkservice HTTP/1.1\u001b[0m\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [14/Feb/2023 07:42:48] \"\u001b[37mGET /checkservice HTTP/1.1\u001b[0m\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [14/Feb/2023 07:43:56] \"\u001b[37mGET /listall HTTP/1.1\u001b[0m\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [14/Feb/2023 07:49:40] \"\u001b[37mGET /listall HTTP/1.1\u001b[0m\" 200 -\n"
           ]
         }
       ]
